/// Greenshot - a free and open source screenshot tool
/// Copyright (C) 2007-2017 Thomas Braun, Jens Klingen, Robin Krom
/// 
/// For more information see: http://getgreenshot.org/
/// The Greenshot project is hosted on GitHub https://github.com/greenshot/greenshot
/// 
/// This program is free software: you can redistribute it and/or modify
/// it under the terms of the GNU General Public License as published by
/// the Free Software Foundation, either version 1 of the License, or
/// (at your option) any later version.
/// 
/// This program is distributed in the hope that it will be useful,
/// but WITHOUT ANY WARRANTY; without even the implied warranty of
/// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
/// GNU General Public License for more details.
/// 
/// You should have received a copy of the GNU General Public License
/// along with this program.  If not, see <http://www.gnu.org/licenses/>.
/// 
/// This file is part of the definition of the Greenshot file format

syntax = "proto3";
import "BaseTypes.proto";
import "Style.proto";
import "Shapes.proto";

package greenshot2.editor.fileformat;

option csharp_namespace = "Greenshot2.Editor.FileFormat";

/// This defines a layer
message Layer {
	repeated Shape shapes = 1;
}

/// This defines the actual file format
message FileFormat {
	string title = 1;
	/// Resources are stored with a string GUID as reference
	map<string, Resource> resources = 2;
	map<string, ShapeStyle> styles = 3;
	repeated Layer layers = 4;
}
